# semester-project-cartesian-trees

./: .gitignore  CMakeLists.txt  README.md  analysis.cpp  contains_time.txt  insert_time.txt  main.cpp  remove_time.txt  utils.hpp
data/insert/: file_100.txt  file_1000.txt  file_10000.txt  file_100000.txt
include/assignment/: cartesian_tree.hpp  node.hpp
src/: cartesian_tree.cpp
tests/: CMakeLists.txt  run_tests.cpp  test_cases.cpp
